# dltrophy-simulator

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  TODO  smiuluator.config
src/: Config.cpp  Config.h  FileHelper.h  LED.h  MainWindow.cpp  MainWindow.h  MessageInterpreter.h  ShaderState.h  SimulatorApp.cpp  SimulatorApp.h  Trophy.h  TrophyShader.cpp  TrophyShader.h  TrophyState.h  UdpInterpreter.h  UdpReceiver.cpp  UdpReceiver.h  WebSocketListener.h  WebSocketService.h  debug.h  geometryHelpers.h  glHelpers.h  inputHelpers.h  main.cpp  shaderHelpers.h
src/messages/: MessageInterpreter.h  UdpInterpreter.h  UdpListener.h  UdpReceiver.h  WebSocketListener.h  timeFormat.h
src/monitor/: Observables.h  PerformanceMonitor.h
src/prototype/: FX.h  FX_compat.h  FX_deadlineTrophy.h
src/prototype-WIP/: FX_deadlineTrophy.h  Prototyper.h
src/prototype-WIP/compat/: FX.h  bus_compat.h  bus_manager_compat.h  colorutils_compat.h  compat.h  const.h  lib8tion_compat.h  pixeltypes.h
src/prototyper/: Prototyper.cpp  Prototyper.h  WHAT_IS_THIS.md
src/prototyper/fx/: FX.h  FX_DEADLINE_TROPHY.h  wled.h
src/prototyper/fx/lib/: DO_NOT_USE_THESE_ELSEWHERE  colorutils.cpp  colorutils.h  fastled_defines.h  hsv2rgb.cpp  hsv2rgb.h  lib8tion.h  pixeltypes.h
src/prototyper/fx/wled/: const.h  shim.cpp  shim.h  wled_math.cpp
src/prototyper/usermods/DEADLINE_TROPHY/: DeadlineTrophy.cpp  DeadlineTrophy.h
src/shaders/: embedded.h  fragment.glsl  riow109.glsl  vertex.glsl
tools/: CMakeLists.txt  Range.h  messages.h  mock_sender.cpp
